// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipeDetailsItemComponent custom styles 1`] = `
<View
  style={
    Object {
      "customStyle": "style",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 18,
          "paddingBottom": 12,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 12,
        },
      ]
    }
  >
    test-content
  </Text>
</View>
`;

exports[`RecipeDetailsItemComponent no styles 1`] = `
<View
  style={Object {}}
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 18,
          "paddingBottom": 12,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 12,
        },
      ]
    }
  >
    test-content
  </Text>
</View>
`;
